Ajustes solicitados por Arthur 28/03 à tarde parte 1
- Responsividade, removi os espaçamentos entre as palavras na frase dos 3C e 3S;
- Correção do número de contato que o botão flutuante do whatsapp que está direcionando;
- No footer, correção do nome "Araújo" que antes estava sem acento;
- Remoção do * nos formulários;
- Criação da pág de Política de Privacidade e adição do link para ir até ela no footer das demais págs.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -688,7 +688,9 @@ section.parteDeBaixo i:hover{
 
     .frase3-text{
         font-size: 20px;
-        gap: 10px;
+        gap: 20px;
+        text-align: center;
+        letter-spacing: 1.5px;
     }
 
     .sobre{
@@ -772,11 +774,12 @@ section.parteDeBaixo i:hover{
 
     /* Parte de baixo */
     section.parteDeBaixo{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         flex-direction: column-reverse;
         gap: 20px;
+    }
+
+    section.parteDeBaixo p{
+        text-align: center;
     }
 
     /* Container do ícones do Instagram e do Facebook */
@@ -818,7 +821,9 @@ section.parteDeBaixo i:hover{
 
     .frase3-text{
         font-size: 20px;
-        gap: 10px;
+        gap: 20px;
+        text-align: center;
+        letter-spacing: 1.5px;
     }
 
     .sobre{
@@ -903,11 +908,12 @@ section.parteDeBaixo i:hover{
 
     /* Parte de baixo */
     section.parteDeBaixo{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         flex-direction: column-reverse;
         gap: 20px;
+    }
+
+    section.parteDeBaixo p{
+        text-align: center;
     }
 
     /* Container do ícones do Instagram e do Facebook */
@@ -950,6 +956,8 @@ section.parteDeBaixo i:hover{
     .frase3-text{
         font-size: 20px;
         gap: 10px;
+        text-align: left;
+        letter-spacing: 1.5px;
     }
 
     .sobre{
@@ -1025,6 +1033,16 @@ section.parteDeBaixo i:hover{
     br{
         display: none;
     }
+
+    /* Parte de baixo */
+    section.parteDeBaixo{
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+
+    section.parteDeBaixo p{
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 599px) and (max-width: 798px) {
@@ -1063,7 +1081,6 @@ section.parteDeBaixo i:hover{
     }
 
     
-    
     /* Footer */
     footer{
         padding: 30px 50px;
@@ -1090,11 +1107,22 @@ section.parteDeBaixo i:hover{
     br{
         display: none;
     }
+
+    /* Parte de baixo */
+    section.parteDeBaixo{
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
 }
 
 @media only screen and (min-width: 799px) and (max-width: 940px){
     .container-inicio{
         width: 60%;
+    }
+
+    .frase3-text{
+        text-align: left;
+        letter-spacing: 1.5px;
     }
 
     .sobre-img img{
