--- a/CSS/servicos.css
+++ b/CSS/servicos.css
@@ -349,11 +349,12 @@ section.parteDeBaixo i:hover{
 
     /* Parte de baixo */
     section.parteDeBaixo{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         flex-direction: column-reverse;
         gap: 20px;
+    }
+
+    section.parteDeBaixo p{
+        text-align: center;
     }
 
     /* Container do ícones do Instagram e do Facebook */
@@ -456,12 +457,14 @@ section.parteDeBaixo i:hover{
 
     /* Parte de baixo */
     section.parteDeBaixo{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         flex-direction: column-reverse;
         gap: 20px;
     }
+
+    section.parteDeBaixo p{
+        text-align: center;
+    }
+
 
     /* Container do ícones do Instagram e do Facebook */
     section.parteDeBaixo > div{
@@ -554,6 +557,16 @@ section.parteDeBaixo i:hover{
     br{
         display: none;
     }
+
+    /* Parte de baixo */
+    section.parteDeBaixo{
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+
+    section.parteDeBaixo p{
+        text-align: center;
+    }
 }
 
 @media only screen and (min-width: 599px) and (max-width: 798px) {
@@ -629,6 +642,12 @@ section.parteDeBaixo i:hover{
     /* Remove a quebra de linha causado pela tag <br> */
     br{
         display: none;
+    }
+    
+    /* Parte de baixo */
+    section.parteDeBaixo{
+        flex-direction: column-reverse;
+        gap: 20px;
     }
 }
 
