Mudei o form para tentar corrigir um problema de excesso de tamanho para mobile (principalmente IOS)
Também fiz:
- Adicionei uma variante do vermelho, uma cor amarela e uma cor verde no base.css;
- De certa forma, acho que refatorei algumas partes dos códigos.

--- a/CSS/base.css
+++ b/CSS/base.css
@@ -5,6 +5,9 @@
     --preto: #000000;
     --cinza: #484545;
     --vermelho: #B2231D;
+    --vermelho2: #e7201d;
+    --amarelo: rgb(255, 251, 1);
+    --verde: #0CBD00;
     --azul-pastel: #617DF3;
     --shadow: rgba(0, 0, 0, 0.468) 0px 5px 15px;
     --fundo: rgba(0, 0, 0, 0.7);
